kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: es-corresponding-models
  labels:
    type: customer
