kubernetes/webserver-service.yml
apiVersion: v1
kind: Service
metadata:
  name: webserver
  namespace: es-corresponding-models
  labels:
    tier: webserver
spec:
  ports:
  - port: 8080
    targetPort: 8080

  selector:
    tier: webserver
