kubernetes/staging-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "ingress-sticky-session"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "false"

  name: staging-ingress
  namespace: es-corresponding-models
spec:
  rules:
  - host: es-corresponding-models.edenspiekermann.io
    http:
      paths:
      - backend:
          serviceName: webserver
          servicePort: 8080
